@@ -1,5 +1,7 @@
 1.2.15.dev0
  * #127: Remove date echo from schema example, as it's not a substitute for real logging.
+ * #132: Leave exclude_patterns glob expansion to Borg, since doing it in borgmatic leads to
+   confusing behavior.
  * #136: Handle and format validation errors raised during argument parsing.
  * #139: Allow use of --stats flag when --create or --prune flags are implied.
 
